{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 63,
  "lineage": "145bc3bf-5a8d-58c0-0ca3-9b650f4cec1a",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:security-group/sg-0e7c5edcbd04c0f4d",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7c5edcbd04c0f4d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022c43806d8cee4f0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster20210404180933485900000004",
            "name_prefix": "eks-cluster",
            "owner_id": "558811456770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:security-group/sg-022c43806d8cee4f0",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022c43806d8cee4f0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7c5edcbd04c0f4d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7c5edcbd04c0f4d"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-cluster20210404181858963700000005",
            "name_prefix": "eks-cluster",
            "owner_id": "558811456770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-eks_worker_sg",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3947682916",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e7c5edcbd04c0f4d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3981591845",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e7c5edcbd04c0f4d",
            "self": false,
            "source_security_group_id": "sg-022c43806d8cee4f0",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3217946821",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-022c43806d8cee4f0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-4183118083",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-022c43806d8cee4f0",
            "self": false,
            "source_security_group_id": "sg-0e7c5edcbd04c0f4d",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1701405428",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-022c43806d8cee4f0",
            "self": false,
            "source_security_group_id": "sg-0e7c5edcbd04c0f4d",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1212137555",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-022c43806d8cee4f0",
            "self": false,
            "source_security_group_id": "sg-022c43806d8cee4f0",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mod_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ddc1dd202bd36efe",
            "domain": "vpc",
            "id": "eipalloc-0abe3f58be1e8ff6c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b44116be1a4342cc",
            "private_dns": "ip-10-20-32-101.ap-south-1.compute.internal",
            "private_ip": "10.20.32.101",
            "public_dns": "ec2-15-207-45-181.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.45.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bdeb1617321d5d37",
            "domain": "vpc",
            "id": "eipalloc-0a7b174b1836f2702",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-020b5ff1c7dda3795",
            "private_dns": "ip-10-20-41-232.ap-south-1.compute.internal",
            "private_ip": "10.20.41.232",
            "public_dns": "ec2-65-0-88-48.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.88.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ec709c6185af253c",
            "domain": "vpc",
            "id": "eipalloc-09d8b870193363d1b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f10dfe5819d70115",
            "private_dns": "ip-10-20-49-56.ap-south-1.compute.internal",
            "private_ip": "10.20.49.56",
            "public_dns": "ec2-13-127-116-163.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.116.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:internet-gateway/igw-043454e8625ffe7e0",
            "id": "igw-043454e8625ffe7e0",
            "owner_id": "558811456770",
            "tags": {
              "Name": "vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0abe3f58be1e8ff6c",
            "id": "nat-0d9e6ff981202cafb",
            "network_interface_id": "eni-0b44116be1a4342cc",
            "private_ip": "10.20.32.101",
            "public_ip": "15.207.45.181",
            "subnet_id": "subnet-0d3672c9185aa1576",
            "tags": {
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7b174b1836f2702",
            "id": "nat-0bd568370f719ed62",
            "network_interface_id": "eni-020b5ff1c7dda3795",
            "private_ip": "10.20.41.232",
            "public_ip": "65.0.88.48",
            "subnet_id": "subnet-0e727253badbc7d1f",
            "tags": {
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d8b870193363d1b",
            "id": "nat-06ab006111837ea02",
            "network_interface_id": "eni-0f10dfe5819d70115",
            "private_ip": "10.20.49.56",
            "public_ip": "13.127.116.163",
            "subnet_id": "subnet-032143b6923c60efe",
            "tags": {
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bd3eb348bbaa182c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d9e6ff981202cafb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd3eb348bbaa182c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02e9ecddc5a13a5d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bd568370f719ed62",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e9ecddc5a13a5d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-010875c1662f0ae3e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06ab006111837ea02",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-010875c1662f0ae3e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-043454e8625ffe7e0",
            "id": "r-rtb-03af4942e03c8a8d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03af4942e03c8a8d4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:route-table/rtb-0bd3eb348bbaa182c",
            "id": "rtb-0bd3eb348bbaa182c",
            "owner_id": "558811456770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9e6ff981202cafb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_az1",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:route-table/rtb-02e9ecddc5a13a5d7",
            "id": "rtb-02e9ecddc5a13a5d7",
            "owner_id": "558811456770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bd568370f719ed62",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_az2",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:route-table/rtb-010875c1662f0ae3e",
            "id": "rtb-010875c1662f0ae3e",
            "owner_id": "558811456770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06ab006111837ea02",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_az3",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:route-table/rtb-03af4942e03c8a8d4",
            "id": "rtb-03af4942e03c8a8d4",
            "owner_id": "558811456770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043454e8625ffe7e0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060176ad87f95cff0",
            "route_table_id": "rtb-0bd3eb348bbaa182c",
            "subnet_id": "subnet-0fde932dc44b19dcd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057cf9840a99182e6",
            "route_table_id": "rtb-02e9ecddc5a13a5d7",
            "subnet_id": "subnet-0c2fb954cfad28dff"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b60c4c7fe539129",
            "route_table_id": "rtb-010875c1662f0ae3e",
            "subnet_id": "subnet-045bd5fcba0e43b19"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0151a39e808fd9d9d",
            "route_table_id": "rtb-0bd3eb348bbaa182c",
            "subnet_id": "subnet-0cdc61b4a3089adcc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015ef079df12e5e5c",
            "route_table_id": "rtb-02e9ecddc5a13a5d7",
            "subnet_id": "subnet-036493fdf9f187799"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7ebf2b25baad922",
            "route_table_id": "rtb-010875c1662f0ae3e",
            "subnet_id": "subnet-009c43efd7b2edbca"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_working",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cb9c29f7dd4a8a8",
            "route_table_id": "rtb-0bd3eb348bbaa182c",
            "subnet_id": "subnet-0464920b41f5c3dd0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5d2b8fd3e926dba",
            "route_table_id": "rtb-02e9ecddc5a13a5d7",
            "subnet_id": "subnet-07e6678a69e153f89"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09558ee2ebab018a1",
            "route_table_id": "rtb-010875c1662f0ae3e",
            "subnet_id": "subnet-009fbe0b780ade613"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7b48fded60ba951",
            "route_table_id": "rtb-03af4942e03c8a8d4",
            "subnet_id": "subnet-0d3672c9185aa1576"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c3c33a04c9488cb",
            "route_table_id": "rtb-03af4942e03c8a8d4",
            "subnet_id": "subnet-0e727253badbc7d1f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01229502f9f14c05f",
            "route_table_id": "rtb-03af4942e03c8a8d4",
            "subnet_id": "subnet-032143b6923c60efe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-0fde932dc44b19dcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.0.0/21",
            "id": "subnet-0fde932dc44b19dcd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "admin_az1",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "admin_az1",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-0c2fb954cfad28dff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.8.0/21",
            "id": "subnet-0c2fb954cfad28dff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "admin_az2",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "admin_az2",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-045bd5fcba0e43b19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.16.0/21",
            "id": "subnet-045bd5fcba0e43b19",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "admin_az3",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "admin_az3",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-0cdc61b4a3089adcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.64.0/21",
            "id": "subnet-0cdc61b4a3089adcc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "private_prod_az1",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_prod_az1",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-036493fdf9f187799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.72.0/21",
            "id": "subnet-036493fdf9f187799",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "private_prod_az2",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_prod_az2",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-009c43efd7b2edbca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.80.0/21",
            "id": "subnet-009c43efd7b2edbca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "private_prod_az3",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_prod_az3",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_working",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-0464920b41f5c3dd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.96.0/21",
            "id": "subnet-0464920b41f5c3dd0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "private_working_az1",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_working_az1",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-07e6678a69e153f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.104.0/21",
            "id": "subnet-07e6678a69e153f89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "private_working_az2",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_working_az2",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-009fbe0b780ade613",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.112.0/21",
            "id": "subnet-009fbe0b780ade613",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "private_working_az3",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_working_az3",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-0d3672c9185aa1576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.32.0/21",
            "id": "subnet-0d3672c9185aa1576",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "public_az1",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "public_az1",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-0e727253badbc7d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.40.0/21",
            "id": "subnet-0e727253badbc7d1f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "public_az2",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "public_az2",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:subnet/subnet-032143b6923c60efe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.48.0/21",
            "id": "subnet-032143b6923c60efe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "558811456770",
            "tags": {
              "Name": "public_az3",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "public_az3",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-02f0736c700291d78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:558811456770:vpc/vpc-02f0736c700291d78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0bbb74c13aef407a2",
            "default_route_table_id": "rtb-01d08c361ff6fdefa",
            "default_security_group_id": "sg-08216474f9e198dde",
            "dhcp_options_id": "dopt-3fb16254",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02f0736c700291d78",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d08c361ff6fdefa",
            "owner_id": "558811456770",
            "tags": {
              "Name": "vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}